@@ -1,0 +1,9 @@
+with Loop_Optimization7_Pkg; use Loop_Optimization7_Pkg;
+
+package Loop_Optimization7  is
+
+   type Arr is array (1..8) of Rec;
+
+   function Conv (A : Arr) return Arr;
+
+end Loop_Optimization7;
