@@ -1,0 +1,10 @@
+package Loop_Optimization7_Pkg is
+  pragma Pure;
+
+  type Rec is record
+    F : Float;
+  end record;
+
+  function Conv (Trig : Rec) return Rec;
+
+end Loop_Optimization7_Pkg;
