@@ -1,3 +1,8 @@
+2009-10-21  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* tree-vect-stmts.c (exist_non_indexing_operands_for_use_p): Tweak
+	order of checks.
+
 2009-10-20  Richard Henderson  <rth@redhat.com>
 
 	* tree-eh.c (lower_try_finally_copy): Do lower_eh_constructs_1
